# app/Containers/User/Data/Transporters/UserLoginDTO.php
@@ -1,0 +1,16 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Containers\User\Data\Transporters;
+
+use App\Ship\Parents\Transporters\Data;
+
+final class UserLoginDTO extends Data
+{
+    /*** @var string */
+    public string $email;
+
+    /*** @var string */
+    public string $password;
+}
